Fixed error messages not showing in Ginger

--- a/ui/css/src/modules/_administration.scss
+++ b/ui/css/src/modules/_administration.scss
@@ -19,7 +19,7 @@
 //
 #administration-root-container {
     .accordion {
-        margin: 12px 60px 12px 80px;
+        margin: 12px 20px 12px 60px;
         padding-bottom: 18px;
         border-bottom: 1px solid $table-border-color;
         overflow: visible;
